--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,7 @@
         <div class="maintext">
             <h1>Hello, I am the<br> Captain Cool</h1>
             <p>Hey! In this video i will be showing you<br> how to hit a helicopter shot</p>
-            <a href="https://en.wikipedia.org/wiki/MS_Dhoni" class="resumebtn">See My Resume</a>       
+            <a href="https://www.youtube.com/watch?v=R0alThHNb0Y" class="resumebtn">See My Video</a>       
          </div>      
   </div>
  </body>
